<resources>
    <!--<string name="ip">http://10.66.199.110:8080/wdb_android/</string>-->
    <!--<string name="ip">http://192.168.43.69:8080/wdb_android/</string>--> //手机
    <string name="ip">http://42.96.150.57:8080/wdb_android/</string>
    <!--<string name="ip">http://192.168.1.103:8080/wdb_android/</string>  //寝室-->
    <string name="app_name">Wdb</string>
    <string name="action_settings">Settings</string>
    <string name="home_bottom_text">微分期</string>
    <string name="loan_bottom_text">微贷款</string>
    <string name="traval_bottom_text">微拼团</string>
    <string name="life_bottom_text">微生活</string>
    <string name="me_bottom_text">个人中心</string>
    <string name="please_login">请登录...</string>
    <string name="longing_zh">登录中...</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_phone_no_error_zh">您输入的手机号码有误</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login_zh">登录</string>
    <string name="login_out_zh">退出登录</string>
    <string name="register_zh">注册</string>
    <string name="input_phone_number_or_usernick_zh">请输入手机号或用户名</string>
    <string name="input_pwd_zh">请输入密码</string>
    <string name="lost_pwd_zh">忘记密码?</string>
    <string name="login_error_zh_">登录失败，请重试...</string>
    <string name="login_ok_zh">登录成功</string>
    <string name="determine_zh">确认</string>
    <string name="next_zh">下一步</string>
    <string name="agree_protocol_zh">我已同意并阅读《微你而生用户》注册协议</string>
    <string name="please_agree_agreement_zh_">请同意注册协议...</string>
    <string name="user_agreement_zh">注册协议</string>
    <string name="get_verification_code_zh">获取验证码</string>
    <string name="input_phone_number_zh">请输入手机号码</string>
    <string name="input_verification_code_zh">请输入验证码</string>
    <string name="lost_pwd_title_zh">忘记密码</string>
    <string name="please_get_code_zh">请获取验证码</string>
    <string name="msg_code_error_zh_">验证码错误，请重试...</string>

    <string name="notarize_pwd_zh">确认密码</string>
    <string name="data_exception_zh">数据解析异常...</string>
    <string name="already_registered_zh_">此号码已经注册，快去登录吧...</string>
    <string name="server_exception_zh_">服务器异常...</string>
    <string name="code_send_ok_zh_">验证码已发送...</string>
    <string name="network_exception">网络连接异常</string>
    <string name="please_confirm_pwd_zh">请确认密码</string>
    <string name="input_deal_pwd_zh">请输入交易密码</string>
    <string name="input_login_pwd_zh">请输入登录密码</string>
    <string name="input_tow_pwd_error_zh">您输入的两次密码不一致</string>
    <string name="pwd_length_error_zh">请输入6位数的交易密码</string>
    <string name="pwd_concat_one_letter_zh">登录密码必须包含至少一个字母</string>
    <string name="loading_registered_zh_">注册中...</string>
    <string name="registered_error_zh_">注册失败，请重试...</string>
    <string name="registered_ok_zh">注册成功！</string>
    <string name="please_login_zh_">请登录...</string>
    <string name="phone_number_no_registered_zh">该号码还未注册，赶快去注册吧</string>
    <string name="submission_zh_">提交中...</string>
    <string name="update_pwd_error_zh">修改密码失败</string>
    <string name="pwd_update_ok_zh">密码修改成功</string>
    <string name="set_pwd_zh">设置密码</string>
    <string name="msg_reg_template_zh">亲爱的用户，您的注册码是：$vcode$</string>
    <string name="msg_forget_code">亲爱的用户，您的验证码是：$vcode$</string>
    <string name="submission_head__zh_">正在上传头像...</string>
    <string name="input_search_zh">请输入你想要的商品</string>
    <string name="text_qprice_zh">电商价：</string>
    <string name="text_sprice_zh">市场价：</string>
    <string name="text_onhand_zh">库存：</string>
    <string name="text_isfirst_zh">是否有首付</string>
    <string name="text_stages_zh">选择分期数</string>
    <string name="title_product_zh">商品详情</string>
    <string name="title_ordersucc_zh">商品详情</string>
    <string name="title_create_order_zh">确认订单</string>
    <string name="side_me_info">个人信息</string>
    <string name="side_my_order">我的订单</string>
    <string name="detail_my_order">订单详情</string>
    <string name="cancle_my_order">取消订单</string>
    <string name="side_my_bill">我的账单</string>
    <string name="history_my_bill">历史账单</string>
    <string name="detail_my_bill">还款详情</string>
    <string name="text_save_zh">保存</string>
    <string name="select_album">选择相册</string>
    <string name="select_image">选择图片</string>
    <string name="in_the_to_xiangce_zh">从手机相册选取</string>
    <string name="in_the_to_xiangji_zh">拍  照</string>
    <string name="cancel">取  消</string>
    <string name="preview_zh">预  览</string>
    <string name="select_pay_way_zh">选择支付方式</string>
    <string name="select_get_way_zh">选择收款方式</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="pay_content">首付金额：34.50元</string>
    <string name="repay_a">每月应还: ￥</string>
    <string name="fenqi_select">选择期数:</string>
    <string name="service_m">手续服务费: ￥</string>
    <string name="title_help_z">帮助中心</string>
   <string name="title_safe_z">安全中心</string>
   <string name="safe_zh">微你而生非常重视学生的账户安全问题。为此，我们推出了很多技术保护措施，确保支付流程的绝对安全，并且用户信息也不会泄漏。大部分交易都能够顺利完成，但风险依然存在。微你而生推出了下列原则，以确保在安全的状况下为学生提供可靠的信用价值服务平台。</string>
   <string name="total_money_zh">资产分析</string>
   <string name="zhongchou_money_zh">发布众筹</string>
   <string name="ailicai_money_zh">爱理财</string>
   <string name="history_my_record">历史记录</string>
   <string name="my_zhongchou_zh">我的众筹</string>
   <string name="touzi_money_zh">我要投资</string>
   <string name="chongzhi_zh">充值</string>
   <string name="school_zh">校园一卡通</string>
   <string name="phone_zh">手机充值</string>
   <string name="bus_zh">公交卡充值</string>
   <string name="notice_zh">当您“确认下单”则表示您阅读并同意《产品合同》，接收该产品由金融机构作为增信机构提供本息兑付增信措施，并知晓在其未能按约履行增信措施等情况下仍有可能面临资金损失风险</string>
   <string name="title_job_zh">兼职中心</string>
 <string name="title_job_detail_zh">职位详情</string>

 <string name="btn_name">聚合支付</string>
 <string name="bn_upmp_pay_name">银联支付</string>
 <string name="bn_alipay_pay_name">支付宝支付</string>
 <string name="bn_dotpay_name">点卡支付</string>
 <string name="bn_rechargpay_name">充值卡支付</string>
 <string name="bn_wechatpg_name">微信支付(插件版)</string>
 <string name="bn_wechatwap_name">微信支付(WAP版)</string>
 <string name="bn_baidu_name">百度支付</string>
 <string name="bn_qqpay_name">QQ支付</string>
 <string name="us">订单信息</string>
 <string name="account_zh">账户信息</string>
 <string name="fit_zh">设置</string>
</resources>

