<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_in_the_to_xiangji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_bfbfbf"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/in_the_to_xiangji_zh"
                android:textColor="#0b499e"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#b3b3b6" />

            <TextView
                android:id="@+id/tv_in_the_to_xiangce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_bfbfbf"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/in_the_to_xiangce_zh"
                android:textColor="#0b499e"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_bfbfbf"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/cancel"
                android:textColor="#0b499e"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>