<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <include layout="@layout/view_status_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background_title_top" >

            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/bt_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/login_zh"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/register_zh"
                android:textColor="@drawable/bt_registered"
                android:textSize="16dp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    >

                    <ImageView
                        android:id="@+id/login_img_center"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/icon_wdb1" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/single_white_text"
                    android:orientation="horizontal"
                    android:padding="0.5dp" >

                    <ImageView
                        android:id="@+id/img_ph_num"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@mipmap/input_phone_number_or_usernick" />

                    <View
                        style="@style/v_line"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp" />

                    <EditText
                        android:id="@+id/et_phone_no"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/input_phone_number_or_usernick_zh"

                        android:maxLength="11"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="#cccccc"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/single_white_text"
                    android:orientation="horizontal"
                    android:padding="0.5dp" >

                    <ImageView
                        android:id="@+id/img_pwd"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@mipmap/input_password" />

                    <View
                        style="@style/v_line"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp" />

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/input_pwd_zh"
                        android:inputType="textPassword"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="#cccccc"
                        android:textSize="14dp" />
                </LinearLayout>
                <!--
                        <EditText
                            android:id="@+id/et_cmd"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:text="applogin"
                            android:enabled="true"
                            >
                        </EditText>
                -->
                <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/lost_pwd_zh"
                    android:textColor="@drawable/bt_forget_pwd"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/bt_login"
                    style="@style/btn_layout"
                    android:layout_marginTop="15dp"
                    android:text="@string/login_zh" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/view_navigation_bar" />

</LinearLayout>